[package]
name = "channel-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
channel-common = { git = "https://github.com/Aquaducts/channel-common.git", branch = "master" }
tokio-tungstenite = { default-features = false, features = [
    "connect",
], version = "0.18" }
tokio = { version = "1.22", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "fs",
    "io-util",
    "process",
] }
futures-util = { version = "0.3.25" }
anyhow = "1.0.68"
once_cell = "1.17.0"
serde = "1.0.152"
serde_json = "1.0.91"
toml = "0.5.10"
bollard = "0.13.0"
async-trait = "0.1.61"
sudo = "0.6.0"
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
tar = "0.4.38"
hyper = { version = "0.14.23", features = ["stream"] }
clap = { version = "4.1.6", features = ["derive"] }

[build-dependencies]
bindgen = "0.63.0"
